--- a/website/stylesheet.css
+++ b/website/stylesheet.css
@@ -7,6 +7,13 @@ body {
     color: white;
     text-align: center;
   }
+.sidenavDetect {
+  width : 250px;
+  height : 100vh;
+  position : fixed;
+  z-index : 0;
+  overflow-x : hidden;
+}
    /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
