--- a/website/stylesheet.css
+++ b/website/stylesheet.css
@@ -13,6 +13,7 @@ body {
   position : fixed;
   z-index : 0;
   overflow-x : hidden;
+  transition: 0.8s;
 }
    /* The side navigation menu */
 .sidenav {
